--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discord-spotify-recommendation",
+  "name": "discord-spotify",
   "version": "1.0.0",
-  "description": "A Spotify Helper To get Recommendations from links of as track",
+  "description": "A Spotify Helper for Discord",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -15,5 +15,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^1.6.8"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.28",
+    "typescript": "^5.4.2"
   }
 }
