--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2021",
-    "module": "es2022",
+    "module": "ESNext",
     "lib": ["es2021"],
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./main",
-    "strict": false,
+    "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
